force-app/main/default/objects/ortoo_qra__User_Attributes__c/ortoo_qra__User_Attributes__c.object-meta.xml
<CustomObject>
    <description>This object serves as a 1-1 mapping with User object. Attributes (fields) can be added to this object and later used by Q-assign configuration to run various types of matching rules while distributing records (such as Leads, Cases).</description>
    <label>Q-assign User Attributes</label>
    <nameField>
        <label>User Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q-assign User Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>