force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <externalId>true</externalId>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>