force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/CategoryFull__c.field-meta.xml
<CustomField>
    <fullName>CategoryFull__c</fullName>
    <label>CategoryFull</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>