force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <externalId>true</externalId>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>