force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/CityFull__c.field-meta.xml
<CustomField>
    <fullName>CityFull__c</fullName>
    <label>CityFull</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>