force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <externalId>true</externalId>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>