force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <externalId>true</externalId>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>