force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/CountyFull__c.field-meta.xml
<CustomField>
    <fullName>CountyFull__c</fullName>
    <label>CountyFull</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>