force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/CustomerSubchannelType__c.field-meta.xml
<CustomField>
    <fullName>CustomerSubchannelType__c</fullName>
    <externalId>true</externalId>
    <label>CustomerSubchannelType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>