force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/CustomerSubchannelTypeFull__c.field-meta.xml
<CustomField>
    <fullName>CustomerSubchannelTypeFull__c</fullName>
    <label>CustomerSubchannelTypeFull</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>