force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>DistributorAccount</label>
    <length>18</length>
    <type>Text</type>
</CustomField>