force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/MarketBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>MarketBusinessUnit__c</fullName>
    <externalId>true</externalId>
    <label>MarketBusinessUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>