force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/Member_Lookup_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Lookup_Rule_Id__c</fullName>
    <externalId>true</externalId>
    <label>Member_Lookup_Rule_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>