force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/OriginalOwner__c.field-meta.xml
<CustomField>
    <fullName>OriginalOwner__c</fullName>
    <externalId>true</externalId>
    <label>OriginalOwner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>