force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/ortoo_qra__User__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unique link to user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>