force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/RuleType__c.field-meta.xml
<CustomField>
    <fullName>RuleType__c</fullName>
    <externalId>true</externalId>
    <label>RuleType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>