force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/SecondaryOwner__c.field-meta.xml
<CustomField>
    <fullName>SecondaryOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SecondaryOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Q_assign_User_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>