force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/SectorChannel__c.field-meta.xml
<CustomField>
    <fullName>SectorChannel__c</fullName>
    <externalId>true</externalId>
    <label>SectorChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>