force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/SectorChannelFull__c.field-meta.xml
<CustomField>
    <fullName>SectorChannelFull__c</fullName>
    <label>SectorChannelFull</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>