force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <externalId>true</externalId>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>