force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/StateFull__c.field-meta.xml
<CustomField>
    <fullName>StateFull__c</fullName>
    <label>StateFull</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>