force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/SubSectorChannel__c.field-meta.xml
<CustomField>
    <fullName>SubSectorChannel__c</fullName>
    <externalId>true</externalId>
    <label>SubSectorChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>