force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/SubSectorChannelFull__c.field-meta.xml
<CustomField>
    <fullName>SubSectorChannelFull__c</fullName>
    <label>SubSectorChannelFull</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>