force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Q-assign User Attributes</relationshipLabel>
    <relationshipName>Q_assign_User_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>