force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <externalId>true</externalId>
    <label>ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>