force-app/main/default/objects/ortoo_qra__User_Attributes__c/fields/ZipCodeFull__c.field-meta.xml
<CustomField>
    <fullName>ZipCodeFull__c</fullName>
    <label>ZipCodeFull</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>