force-app/main/default/objects/ortoo_qra__User_Attributes__c/listViews/Sales_Teams.listView-meta.xml
<ListView>
    <fullName>Sales_Teams</fullName>
    <columns>NAME</columns>
    <columns>CustomerSegment__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Mine</filterScope>
    <label>Sales Teams</label>
</ListView>